...
    "Category.Cosplay" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cosplay"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "コスプレ"
...
            "value" : "キャンセル"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "取消"
...
            "value" : "我要现在看"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "我要現在看"
          }
        }
      }
    },
    "Common.ReadProgress" : {
      "extractionState" : "manual",
...
            "value" : "用相关字词搜索"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "用相關字詞搜尋"
          }
        }
      }
    },
    "Common.Share" : {
      "extractionState" : "manual",
...
            "value" : "表紙がありません"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "缺少封面"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "缺少封面"
...
            "value" : "今日"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "今天"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "今天"
...
            "value" : "反选"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "反選"
          }
        }
      }
    },
    "Search.KeywordPlaceholder" : {
      "extractionState" : "manual",
...
            "value" : "全选"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "全選"
          }
        }
      }
    },
    "Search.TagHints" : {
      "extractionState" : "manual",
...
