...
            "value" : "左右滚动"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "左右捲動"
          }
        }
      }
    },
    "Direction.Vertical" : {
      "extractionState" : "manual",
...
            "value" : "中国語"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "中文"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "中文"
...
            "value" : "星4以上"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "4星以上"
          }
        },
        "zh-Hant" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "4星以上"
...
